--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -16096,7 +16096,7 @@ textarea:focus,
 .grid-header {
   background: var(--color-interface-softest);
   border-radius: var(--rounded-medium) var(--rounded-medium) 0 0;
-  z-index: 1;
+  z-index: 3;
 }
 
 .grid-obsidian.grid-sticky > .grid-header {
@@ -16106,7 +16106,7 @@ textarea:focus,
 
 .grid-obsidian .grid-content-container .grid-column-header-container.sticky-column-header {
   position: sticky;
-  z-index: 1;
+  z-index: 3;
   background-color: var(--color-interface-softest);
 }
 
@@ -16120,7 +16120,7 @@ textarea:focus,
 .grid-obsidian.grid-sticky .sticky-column-header {
   position: sticky;
   top: calc(var(--sticky-element-offset) + 57px);
-  z-index: 1;
+  z-index: 3;
   background-color: var(--color-interface-softest);
 }
 
